# means-testing

./: README.md  pyproject.toml
examples/: MultipleSamples_Normal.ipynb  TwoSamples_NonNormality.ipynb  TwoSamples_Normal.ipynb
examples/.ipynb_checkpoints/: MultipleSamples_NonNormality-checkpoint.ipynb
src/means_testing/: MultipleSamples_NonNormality.py  MultipleSamples_Normal.py  TwoSamples_NonNormality.py  TwoSamples_Normal.py  means_testing.py  rmlater.py
