[project]
name = "means-testing"
version = "0.0.7"
description = "A simple library that automatically identifies the appropriate statistical test for comparing the means between two or more independent samples, and checking for statistical differences."
readme = "README.md"
authors = [
    { name = "RenZhen95", email = "j-liaw@hotmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.17.3",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]

[project.urls]
GitHub = "https://github.com/RenZhen95/means-testing/"

[project.scripts]
means-testing = "means_testing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "means-testing",
]

[tool.uv.sources]
means-testing = { workspace = true }
